--- a/style.css
+++ b/style.css
@@ -1,8 +1,18 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+.container {
+    max-width: 750px;
+    height: 350px;
+    margin: 0px auto;
+}
 .carousel {
     margin: 0 auto;
     position: relative;
 }
-.carousel .carousel-indicators {
+.carousel .carousel_indicators {
     position: absolute;
     bottom: 0;
     left: 50%;
@@ -14,7 +24,7 @@
     padding: 10px;
     list-style: none;
 }
-.carousel .carousel-indicators li {
+.carousel .carousel_indicators li {
     flex: 0 1 auto;
     width: 25px;
     height: 2px;
@@ -22,30 +32,30 @@
     background-color: #E6FFC8;
     border-radius: 50%;
 }
-.carousel .carousel-indicators .active {
+.carousel .carousel_indicators .active {
     background-color: #fff;
 }
-.carousel .carousel-window {
+.carousel .carousel_window {
     width: 100%;
     height: 350px;
     position: relative;
     overflow: hidden;
 }
-.carousel .carousel-slides {
+.carousel .carousel_slides {
     height: 100%;
     display: flex;
     transition: transform 0.5s;
 }
-.carousel .carousel-item {
+.carousel .carousel_item {
     height: 100%;
 }
-.carousel .carousel-item img {
+.carousel .carousel_item img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 5px;
 }
-.carousel .carousel-prev, .carousel .carousel-next {
+.carousel .carousel_prev, .carousel .carousel_next {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -55,23 +65,23 @@
     align-items: center;
     width: 15%;
 }
-.carousel .carousel-prev .carousel-prev-icon, .carousel .carousel-next .carousel-prev-icon{
+.carousel .carousel_prev .carousel_prev_icon, .carousel .carousel_next .carousel_prev_icon{
     padding: 10px;
     background-color: #fff;
     border-radius: 5px;
     width: 40px;
     height: 40px;
 }
-.carousel .carousel-prev .carousel-prev-icon{
+.carousel .carousel_prev .carousel_prev_icon{
     transform: rotate(0.5turn);
 }
 /* .carousel .carousel-prev:hover, .carousel .carousel-next:hover {
     opacity: 1;
     background-color: rgba(0, 0, 0, 0.2);
 } */
-.carousel .carousel-prev {
+.carousel .carousel_prev {
     left: 0;
 }
-.carousel .carousel-next {
+.carousel .carousel_next {
     right: 0;
 }
